
'''English'''

'''Version 2.9.50'''
* added custom fields mapping to database fields in case its possible

'''Version 2.9.49'''
* optimized get items query
* added selected shipping method to check_cart
* fix get installed plugins on ping method for invalid plugins
* added check cart error messages from system
* fixed missing shipping costs on imported orders
* fixed compatibility issues for older Prestashop versions 1.4.x.x
* increased performance of XML uids product export
* fixed product import issue because of invalid field "tax percent"
* cancellations are supported now

'''Version 2.9.48'''
* fixing mobile redirect for older versions

'''Version 2.9.47'''
* fixed empty phone number for addresses
* changed default carrier to shopgate
* fixed issue in stock check of products
* fixed issues in returning shipping methods during cart validation
* fixed configuration mapping (Mobile carrier) for shipping methods
* fixed product export for product relations
* fixed product export field tax class
* uses Shopgate Library 2.9.21

'''Version 2.9.46'''
* fixed bug with similar products
* fixing issue with voucher tax

'''Version 2.9.45'''
* fixed issue with availability text
* fixed issue in export of tax rules
* fix config issues on install
* uses Shopgate Library 2.9.19

'''Version 2.9.44'''
* fixing config issues for older PHP versions

'''Version 2.9.43'''
* Fix issue in Shopgate Order Model
* Fix issue include backward_compatibility
* raised library version to 1.9.17
* fixed compatibility issue with Prestashop version 1.4.x.x
* fixed installation issues

'''Version 2.9.42'''
* Fix issue on create Shopgate carrier
* Fix issue in category export
* Fix issue in XML validation
* Fix Tax issues
* Fix issues with mobile redirect

'''Version 2.9.41'''
* Fixing backward_compatibility issue

'''Version 2.9.40'''
* root categories can now be exported either on top-level or simply as sub categories (configuration setting)

'''Version 2.9.39'''