@@ -3,6 +3,7 @@
 
 '''Version 2.9.50'''
 * added custom fields mapping to database fields in case its possible
+* fixed display problem of Shopgate orders in the Prestashop backend
 
 '''Version 2.9.49'''
 * optimized get items query
